fixed hero overlapping

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,7 +37,7 @@ nav{
 
 .hero {
     width: 100%;
-    height: 100vh;
+    height: auto;
     position: relative;
   
     h1 {
@@ -171,7 +171,7 @@ nav{
         padding: 5% 6%;
         display: flex;
         position: relative;
-        height: auto;
+        height: 100%;
         align-items: flex-start;
         justify-content: flex-end;
         flex-direction: column;
